syntax = "proto3";

package gameplay_service;

message SellRequest {
    string userId = 1;
    string placedItemId = 2;
}

message SellResponse {
    int32 quantity = 1;
}